--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 .vscode
 docker-compose.yml
 ###< Other files and folders ###
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
