--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,23 @@
         "php": ">=8.1.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.16",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.35",
+        "phpunit/phpunit": "^10.4",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "symfony/phpunit-bridge": "^6.3"
     },
     "config": {
         "allow-plugins": {
